[gd_scene load_steps=3 format=3 uid="uid://c6gqotobi2d0w"]

[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/item_objects/event_2d.gd" id="1_u67xn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onvis"]
size = Vector2(14, 25)

[node name="Event2D" type="Node2D"]
script = ExtResource("1_u67xn")

[node name="EventPolygon" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -12, 6, -3.5, 6, 3.5, 0, 12, -6, 3.5, -6, -3.5)

[node name="Connector" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0

[node name="StartPolygon" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -4, 4, 0, 0, 4, -4, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_onvis")
